<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.divinkas.app.words.utils.view.WordsTextInputLayout
            android:id="@+id/labelWord"
            style="@style/AppTheme.TextInputLayout.WithErr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etWord"
                style="@style/AppTheme.EditText.Default.Josefin.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_word"
                android:inputType="text"
                tools:ignore="Autofill" />
        </com.divinkas.app.words.utils.view.WordsTextInputLayout>

        <com.divinkas.app.words.utils.view.WordsTextInputLayout
            android:id="@+id/labelTranslate"
            style="@style/AppTheme.TextInputLayout.WithErr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/labelWord"
            app:layout_constraintStart_toStartOf="@+id/labelWord"
            app:layout_constraintTop_toBottomOf="@+id/labelWord">

            <EditText
                android:id="@+id/etTranslate"
                style="@style/AppTheme.EditText.Default.Josefin.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_translate"
                android:inputType="text"
                tools:ignore="Autofill" />
        </com.divinkas.app.words.utils.view.WordsTextInputLayout>

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="@dimen/defaultPadding"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="@+id/labelTranslate"
            app:layout_constraintStart_toStartOf="@+id/labelTranslate"
            app:layout_constraintTop_toBottomOf="@+id/labelTranslate" />

        <TextView
            android:id="@+id/btnAddCategory"
            style="@style/AppTheme.Btn.Active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_category"
            app:layout_constraintEnd_toEndOf="@+id/categorySpinner"
            app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

        <TextView
            android:id="@+id/btnSaveWord"
            style="@style/AppTheme.Btn.Active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/labelTranslate"
            app:layout_constraintStart_toStartOf="@+id/labelTranslate"
            app:layout_constraintTop_toBottomOf="@+id/btnAddCategory" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
