<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="?attr/backgroundBody">

    <com.divinkas.app.words.utils.view.WordsTextInputLayout
        android:id="@+id/labelCategory"
        style="@style/AppTheme.TextInputLayout.WithErr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etCategory"
            style="@style/AppTheme.EditText.Default.Josefin.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_word"
            android:inputType="text"
            tools:ignore="Autofill" />
    </com.divinkas.app.words.utils.view.WordsTextInputLayout>

    <TextView
        android:id="@+id/btnAddCategory"
        style="@style/AppTheme.Btn.Active"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/labelCategory" />

    <TextView
        android:id="@+id/btnCancel"
        style="@style/AppTheme.Btn.Active"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="1dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddCategory"
        app:layout_constraintEnd_toStartOf="@+id/btnAddCategory"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnAddCategory" />
</androidx.constraintlayout.widget.ConstraintLayout>